--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "harry's-hardware",
+  "name": "harry's-hardware-v0.02",
   "private": true,
   "version": "0.0.0",
   "type": "module",
